--- a/spring-server/supportapi/src/main/resources/application.properties
+++ b/spring-server/supportapi/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=supportapi
+
+# H2
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:./data/supportdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
