--- a/svelte-client/package.json
+++ b/svelte-client/package.json
@@ -32,5 +32,8 @@
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"mode-watcher": "^0.3.1"
+	}
 }
